objects/sbaa__ApprovalCondition__c.object
<CustomObject>
    <fields>
        <fullName>sbaa__ApprovalRule__c</fullName>
        <label>Approval Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Approval Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sbaa__FilterField__c</fullName>
        <label>Filter Field</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__FilterValue__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__FilterVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipName>EntryCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ends with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__TestedField__c</fullName>
        <label>Tested Field</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount_Role__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount(%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__PaymentTerms__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price_Cap__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price_Hold__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__SubscriptionTerm__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__NetAmount__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use_Case__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal_Increase__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__TotalCustomerDiscountAmount__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt_Out_Period__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed_Start_Date__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early_Renewal__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract_Term_Approval__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X1st_yr_ACV_50_Last_Yr_ACV__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average_Discount_per_Product__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__TestedVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tested Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipName>EntryCriteriaTested</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Condition</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Condition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>